# google-foobar-2023-q4

./: .gitignore  .gitmodules  README.md  conftest.py  environment.full.yml  environment.yml  package.json  pnpm-lock.yaml  poetry.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
cli/: __init__.py
dev-notes/: 3-python-workflow-package-issue.md  jupyterhub-scratch.ipynb  readme_google_foobar_2023_q4.dev.md  readme_poetry_run_fire.md  readme_q.template.md
dev-notes/experiments/: scratch.ps1
docs/assets/: hychan48-cake-is-not-a-lie-abab.cast  hychan48-dont-get-volunteered-0-1.cast  pnpm-run-test-q1.cast  pytest-levels-q1-tests-solutions_test.py.cast  pytest-levels-q2-tests-solutions_test.py.cast
levels/: __init__.py
levels/q1/: readme_q1_the-cake-isnot-a-lie.md
levels/q1/raw/: q1_readme.txt.html  v1.files.json  v1.files.yaml
levels/q1/src/: solution.py
levels/q1/tests/: q1-exp.test.mjs  solutions_test.py
levels/q2/: dont_get_volunteered.py  readme_q2_dont-get-volunteered.md
levels/q2/raw/: q2_readme.txt.html  v2.files.json  v2.files.yaml
levels/q2/src/: solutions.py
levels/q2/tests/: q2-exp.test.mjs  solutions_bfs_test.py
scripts/builds/: environment.yml  poetry-build-wheel.sh
scripts/dev-setup/: first-time-setup.sh  launch-jupyter.sh  one-time.sh  postCreateCommand.sh
scripts/smoke-tests/: pipx-local-cli.bats  python-fire-cli.bats  python-fire-cli.sh
