[tool.poetry]
name = "google-foobar-2023-q4"
version = "0.0.1"
description = "https://github.com/hychan48/google-foobar-2023-q4"
authors = ["JC <jchan48@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0"
[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src", "src2",
]
